# rocket-yew-todo

./: .gitignore  README.md  justfile  tree.txt
src/: main.rs
src/rocket-app/: Cargo.toml
src/rocket-app/src/: main.rs
src/rocket-app/src/controllers/: task.rs
src/rocket-app/src/repositories/: mod.rs  mongo_client.rs  task.rs
src/rocket-app/src/services/: config.rs  task.rs
src/todo_models/: Cargo.toml
src/todo_models/src/: lib.rs
src/yew-app/: Cargo.toml  index.html
src/yew-app/src/: lib.rs
src/yew-app/src/services/: mod.rs  task.rs  task_client.rs
yew-app/: Cargo.toml
