[package]
name = "rocket-yew-sample"
version = "0.1.0"
authors = ["mitchgollub <mgollub@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket="0.4"
serde = "1"
serde_derive = "1"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["mongodb_pool", "json", "serve"]

[dependencies.mongodb]
version = "1.1.0"
default-features = false
features = ["sync"]